# CalFusion

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  ROADMAP.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml  python-app.yml
docs/: _config.yml  index.md
templates/: add_icloud.html  add_ics.html  base.html  index.html  layout.html  login.html  shortcuts.html  sources.html  statistics.html
tests/: conftest.py  test_app.py
